# patroa

./: .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3  models.py  package-lock.json  package.json  pyproject.toml  run.py
api/: data.json  gastos.csv  main.py  pyproject.toml
api/src/: database.py  main.py
api/src/schemas/: deploy_schema.py
backend/: main.py  pyproject.toml
backend/routes/: clients.py
backend/schemas/: clients.py
backend/services/: client_metrics.py
backend/src/models/: deploy.py
backend/src/routes/: deploy_routes.py
fluxo-caixa-mvp/: package-lock.json  package.json  tailwind.config.js
fluxo-caixa-mvp/src/: App.tsx  main.tsx
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  LadingPage.jsx  main.jsx
frontend/src/components/analytics/: FinancialRunwayChart.jsx  LifetimeValueCard.jsx  OverviewCards.jsx  ProductPerformance.jsx  RevenueChart.jsx  RevenueProjectionChart.jsx
frontend/src/components/common/: Sidebar.jsx  Spinner.jsx
frontend/src/components/ladingpage/: Billing.jsx  Business.jsx  CardDeal.jsx  Footer.jsx  Hero.jsx
frontend/src/components/orders/: DailyOrders.jsx  OrderDistribution.jsx  OrdersTable.jsx
frontend/src/components/overview/: CategoryDistributionChart.jsx  SalesChannelChart.jsx  SalesOverviewChart.jsx
frontend/src/components/products/: ProductsTable.jsx
frontend/src/components/sales/: CustoDeAquisicaoDeClientes.jsx  SalesByCategoryChart.jsx  SalesOverviewChart.jsx
frontend/src/components/settings/: Profile.jsx
frontend/src/components/ui/: LoadingBar.jsx
frontend/src/components/users/: UserActivityHeatmap.jsx  UserDemographicsChart.jsx  UserGrowthChart.jsx  UsersTable.jsx
frontend/src/constants/: index.js
frontend/src/hooks/: useCampanhas.js
frontend/src/pages/: AnalyticsPage.jsx  Autenticacao.jsx  ColaboradoresPage.jsx  InformationOverview.jsx  MVP.jsx  OverviewPage.jsx  ProductsPage.jsx  SalesPage.jsx  SettingsPage.jsx  UsersPage.jsx
gateway/: .gitignore  main.py  pyproject.toml
gateway/services/: facebook.py
kns-frontend/: index.html  package-lock.json  package.json
kns-frontend/src/components/: Hero.jsx
react-admin-dashboard/src/components/common/: Sidebar.jsx
react-admin-dashboard/src/pages/: OverviewPage.jsx
src/: App.tsx  settings.py  urls.py
src/components/: Dashboard.css  Dashboard.tsx  DeployDashboard.style.ts  DeployDashboard.tsx  DeployDashboardList.tsx  DeployDashboardType.type.ts
src/controllers/: deploy_controllers.py
src/data/: data.js
src/models/: deploy.py
src/routes/: deploy_routes.py
src/schemas/: deploy_schema.py
src/services/: api.ts
static/css/: style.css
static/js/: script.js
templates/: index.html
