[tool.poetry]
name = "patroa"
version = "0.1.0"
description = "Patroa's Backend"
authors = ["thehecktour"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = { extras = ["standard"], version = ">=0.115.12,<0.116.0" }
uvicorn = ">=0.34.2,<0.35.0"
sqlalchemy = ">=2.0.41,<3.0.0"
pydantic = ">=2.11.4,<3.0.0"
databases = ">=0.9.0,<0.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
